--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
 	margin: 0;
 	padding: 0;
@@ -8,86 +7,183 @@
 	-webkit-tap-highlight-color: transparent;
 }
 
+::-webkit-scrollbar {
+	background: transparent;
+	width: 8px;
+	height: 0;
+}
+
+::-webkit-scrollbar-track {
+	background: #202020;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #101010;
+	border-radius: .5rem 0 0 .5rem;
+}
+
 body {
 	background-color: #202020;
 	color: #ededed;
-	font-family: 'Dongle', sans-serif;	
-	font-size: 1.6em;
+	font-family: 'Roboto', sans-serif;
 }
 
 header {
-	display: none;
-	background-color: #303030;
+	/* display: none; */
+	background: linear-gradient(to bottom, #303030, #262626);
 	box-shadow: 0 2px 5px #0000004d;
 	margin-bottom: 20px;
-	padding: 20px;
-}
-
-h1{
-	color: #0099ff;
-	text-align: center;
-}
-
-section{
-	padding: 10px 20px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-}
-
-.container{
-	margin: 40px 0;
-	background: #181818;
-	border-radius: .5rem;
 	padding: 10px;
 }
 
-h2{
+h1 {
+	color: #0099ff;
+	text-align: center;
+	font-size: 26px;
+}
+
+section {
+	padding: 10px 20px;
+	display: flex;
+	flex-direction: column;
+	/* align-items: center;
+	justify-content: center; */
+}
+
+.container {
+	margin: 40px auto;
+	background: #181818;
+	border-radius: .5rem;
+	padding: 10px 10px 20px;
+	box-sizing: border-box;
+	width: fit-content;
+}
+
+h2 {
 	border-bottom: 2px solid #202020;
 	margin: 0 0 10px;
 }
 
-ul{
+ul {
 	list-style: none;
 	display: flex;
-	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
 	gap: 10px;
 }
 
-li{
-	background: #303030;
-	/* min-width: 250px; */
+li {
+	position: relative;
+	background-color: #202020;
 	padding: 10px 16px;
-	border-radius: .5rem;
-	box-shadow: 0 0 5px #0000004d;
-}
-
-b{
-	background: linear-gradient(to right, #181818, #00000000);
-	padding: 2px 8px;
 	box-sizing: border-box;
-	border-radius: 0.5rem 0 0 0;
+	border-radius: .5rem;
+	cursor: pointer;
+	width: 100%;
+	max-width: 600px;
 }
 
-hr{
+li * {
+	position: relative;
+	z-index: 1;
+}
+
+li::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: calc(100% - 2px);
+	border: 1px solid #0099ff;
+	border-right: none;
+	background: #303030;
+	border-radius: .5rem 0 0 .5rem;
+	transform: scaleX(0);
+	transform-origin: left;
+	transition: .2s;
+	z-index: 0;
+}
+
+li::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 50%;
+	height: calc(100% - 2px);
+	border: 1px solid #0099ff;
+	border-left: none;
+	background: #303030;
+	border-radius: 0 .5rem .5rem 0;
+	transform: scaleX(0);
+	transform-origin: right;
+	transition: .2s;
+	z-index: 0;
+}
+
+li:hover::before, li:hover::after {
+	transform: scaleX(1);
+}
+
+b {
+	background: linear-gradient(10deg, #121212, #181818 20%, #0033662d 60%, transparent 75%);
+	padding: 4px 8px 2px;
+	box-sizing: border-box;
+	border-radius: .4rem 1rem 0 0;
+	display: flex;
+	width: 80%;
+}
+
+hr {
+	position: relative;
 	border: none;
 	border-bottom: 1px solid #181818;
 	margin: 0 20% 10px 0;
 }
 
+p {
+	margin: 10px 5px;
+}
+
+pre {
+	margin: 16px 0 0;
+	background: #181818;
+	padding: 10px 8px;
+	overflow-x: auto;
+	font-size: 12px;
+	border-radius: .5rem;
+}
+
+#copyLinkBt{
+	width: 100%;
+	/* max-width: 360px; */
+	border:none;
+	border-radius: .2rem;
+	background: #0099ff;
+	cursor: pointer;
+	padding: 8px 16px;
+	box-sizing: border-box;
+	margin: 0 0 20px;
+}
+
+#copyLinkBt:active{
+	opacity: .8;
+}
+
+.badge {
+	margin: 8px 8px 0 0;
+}
+
 a {
 	text-decoration: none;
-	color: #006699;
+	color: #ededed;
 }
 
 a:visited {
-	color: #006699
+	color: #ededed
 }
 
-a:hover{
-	color: #0099ff;
+a:hover {
+	color: #ededed;
 }
-
