--- a/index.css
+++ b/index.css
@@ -56,8 +56,7 @@ section {
 	border-radius: .5rem;
 	padding: 10px 10px 20px;
 	box-sizing: border-box;
-	width: fit-content;
-	max-width: 100%;
+	width: 100%;
 	overflow-x: auto;
 }
 
@@ -70,8 +69,15 @@ ul {
 	list-style: none;
 	display: flex;
 	justify-content: center;
+	align-items: stretch;
 	flex-wrap: wrap;
 	gap: 10px;
+}
+
+a{
+	display: flex;
+	width: 100%;
+	max-width: 600px;
 }
 
 li {
@@ -83,6 +89,9 @@ li {
 	cursor: pointer;
 	width: 100%;
 	max-width: 600px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 li * {
@@ -167,10 +176,17 @@ pre {
 	padding: 8px 16px;
 	box-sizing: border-box;
 	margin: 0 0 20px;
+	opacity: .8;
+	font-weight: bolder;
+}
+
+#copyLinkBt:hover{
+	opacity: 1;
 }
 
 #copyLinkBt:active {
 	opacity: .8;
+	transform: scale(.98);
 }
 
 .badge {
