--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -14,26 +15,27 @@
 }
 
 ::-webkit-scrollbar-track {
-	background: #202020;
+	background: #101010;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #101010;
+	background: #202020;
 	border-radius: .5rem 0 0 .5rem;
 }
 
 body {
-	background-color: #202020;
+	background-color: #000;
 	color: #ededed;
 	font-family: 'Roboto', sans-serif;
 }
 
 header {
 	/* display: none; */
-	background: linear-gradient(to bottom, #303030, #262626);
-	box-shadow: 0 2px 5px #0000004d;
-	margin-bottom: 20px;
+	background: linear-gradient(to bottom, #161616, #101010);
+	box-shadow: 0 5px 5px #00000080;
 	padding: 10px;
+	z-index: 2;
+	position: relative;
 }
 
 h1 {
@@ -43,25 +45,79 @@ h1 {
 }
 
 section {
-	padding: 10px 20px;
+	padding: 0 0;
 	display: flex;
 	flex-direction: column;
 	/* align-items: center;
 	justify-content: center; */
+	position: relative;
+	width: 100%;
+	min-height: calc(100vh - 50px);
+	overflow-x: hidden;
+}
+
+#mouseSeeker {
+	position: absolute;
+	background: linear-gradient(to right, #0099ff, #77ff77, #ff3344, #930fda, #ff3344, #77ff77, #0099ff);
+	background-size: 1000%;
+	width: 450px;
+	height: 450px;
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+	animation: rgb 10s ease infinite;
+}
+
+#mouseSeeker::after {
+	content: '';
+	position: absolute;
+	top: -5%;
+	left: -5%;
+	width: 110%;
+	height: 110%;
+	background: radial-gradient(transparent, #000000f0 50%, #000000);
+	border-radius: 50%;
+}
+
+@keyframes rgb {
+	0% {
+		background-position: 100% 100%;
+	}
+
+	50% {
+		background-position: 0% 0%;
+	}
+
+	100% {
+		background-position: 100% 100%;
+	}
+}
+
+#background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url("pattern.svg");
+	background-size: 64px 32px;
+	z-index: 1;
 }
 
 .container {
+	z-index: 2;
 	margin: 40px auto;
-	background: #181818;
+	background: #10101080;
 	border-radius: .5rem;
 	padding: 10px 10px 20px;
 	box-sizing: border-box;
-	width: 100%;
+	width: 98%;
+	max-width: 1280px;
 	overflow-x: auto;
+	box-shadow: 5px 5px 5px #00000080;
 }
 
 h2 {
-	border-bottom: 2px solid #202020;
+	border-bottom: 2px solid #161616;
 	margin: 0 0 10px;
 }
 
@@ -74,7 +130,7 @@ ul {
 	gap: 10px;
 }
 
-a{
+a {
 	display: flex;
 	width: 100%;
 	max-width: 600px;
@@ -82,7 +138,7 @@ a{
 
 li {
 	position: relative;
-	background-color: #202020;
+	background: #18181880;
 	padding: 10px 16px;
 	box-sizing: border-box;
 	border-radius: .5rem;
@@ -108,7 +164,7 @@ li::before {
 	height: calc(100% - 2px);
 	border: 1px solid #0099ff;
 	border-right: none;
-	background: linear-gradient(to right, #303030, #202020);
+	background: linear-gradient(to right, #202020, #161616);
 	border-radius: .5rem 0 0 .5rem;
 	transform: scaleX(0);
 	transform-origin: left;
@@ -125,7 +181,7 @@ li::after {
 	height: calc(100% - 2px);
 	border: 1px solid #0099ff;
 	border-left: none;
-	background: linear-gradient(to left, #303030, #202020);
+	background: linear-gradient(to left, #202020, #161616);
 	border-radius: 0 .5rem .5rem 0;
 	transform: scaleX(0);
 	transform-origin: right;
@@ -180,7 +236,7 @@ pre {
 	font-weight: bolder;
 }
 
-#copyLinkBt:hover{
+#copyLinkBt:hover {
 	opacity: 1;
 }
 
