--- a/index.css
+++ b/index.css
@@ -106,14 +106,14 @@ section {
 .container {
 	z-index: 2;
 	margin: 40px auto;
-	background: #10101080;
+	background: #101010c0;
 	border-radius: .5rem;
 	padding: 10px 10px 20px;
 	box-sizing: border-box;
 	width: 98%;
 	max-width: 1280px;
 	overflow-x: auto;
-	box-shadow: 5px 5px 5px #00000080;
+	box-shadow: 0 0 5px 2px #000000c0;
 }
 
 h2 {
@@ -138,7 +138,7 @@ a {
 
 li {
 	position: relative;
-	background: #18181880;
+	background: #181818c0;
 	padding: 10px 16px;
 	box-sizing: border-box;
 	border-radius: .5rem;
@@ -148,6 +148,7 @@ li {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	box-shadow: 0 0 5px 2px #00000080;
 }
 
 li * {
