--- a/index.css
+++ b/index.css
@@ -21,6 +21,14 @@
 ::-webkit-scrollbar-thumb {
 	background: #202020;
 	border-radius: .5rem 0 0 .5rem;
+	box-shadow: inset 0 0 5px #303030;
+}
+
+::-webkit-scrollbar-thumb:hover{
+	background: #0099ff;
+}
+::-webkit-scrollbar-thumb:active{
+	background: #003366;
 }
 
 body {
@@ -52,8 +60,8 @@ section {
 	justify-content: center; */
 	position: relative;
 	width: 100%;
-	min-height: calc(100vh - 50px);
-	overflow-x: hidden;
+	height: fit-content;
+	overflow: hidden;
 }
 
 #mouseSeeker {
@@ -110,7 +118,7 @@ section {
 	border-radius: .5rem;
 	padding: 10px 10px 20px;
 	box-sizing: border-box;
-	width: 98%;
+	width: 80%;
 	max-width: 1280px;
 	overflow-x: auto;
 	box-shadow: 0 0 5px 2px #000000c0;
@@ -190,7 +198,7 @@ li::after {
 	z-index: 0;
 }
 
-li:hover::before, li:hover::after {
+li.hovered::before, li.hovered::after {
 	transform: scaleX(1);
 }
 
