--- a/index.css
+++ b/index.css
@@ -6,6 +6,8 @@
 	padding: 0;
 	outline: none;
 	-webkit-tap-highlight-color: transparent;
+	user-select: none;
+	box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
@@ -68,7 +70,7 @@ section {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: 100vw;
 	height: 100%;
 	background: radial-gradient(rgb(16,16,16),rgb(0, 0, 0));
 }
