--- a/index.css
+++ b/index.css
@@ -26,17 +26,24 @@
 	box-shadow: inset 0 0 5px #303030;
 }
 
-::-webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover {
 	background: #0099ff;
 }
-::-webkit-scrollbar-thumb:active{
+
+::-webkit-scrollbar-thumb:active {
 	background: #003366;
 }
 
 body {
-	background: radial-gradient(#161616,#000);
+	background: radial-gradient(#161616, #000);
 	color: #ededed;
 	font-family: 'Roboto', sans-serif;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	min-height: 100vh;
+	padding-bottom: 100px;
 }
 
 header {
@@ -66,13 +73,13 @@ section {
 	overflow: hidden;
 }
 
-#canvas1{
+#canvas1 {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100vw;
-	height: 100%;
-	background: radial-gradient(rgb(16,16,16),rgb(0, 0, 0));
+	height: 100vh;
+	background: radial-gradient(rgb(16, 16, 16), rgb(0, 0, 0));
 }
 
 /* #mouseSeeker {
@@ -280,4 +287,59 @@ a:visited {
 
 a:hover {
 	color: #ededed;
+}
+
+footer {
+	/* display: none; */
+	background: linear-gradient(to top, #161616dd, #101010ad);
+	box-shadow: 0 5px 5px #00000080;
+	padding: 10px;
+	z-index: 2;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-evenly;
+	text-align: center;
+	gap: 9px;
+}
+
+footer a {
+	text-decoration: underline;
+	width: fit-content;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+}
+
+#hideInterfaceBt {
+	outline: none;
+	border: none;
+	border-radius: .2rem;
+	background-color: #202020;
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	padding: 0 16px;
+	box-sizing: border-box;
+	color: #ccc;
+	cursor: pointer;
+	opacity: .8;
+}
+
+#hideInterfaceBt:hover {
+	opacity: 1;
+	transform: scale(1.02);
+}
+
+#hideInterfaceBt:active {
+	transform: scale(.98);
+}
+
+#eyeImg {
+	width: 24px;
+	opacity: .5;
 }
