--- a/index.css
+++ b/index.css
@@ -131,7 +131,7 @@ h1 {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	background: radial-gradient(rgb(16, 16, 16), rgb(0, 0, 0));
 }
 
