--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@
 	box-sizing: border-box;
 	letter-spacing: 1.2px;
 	scroll-behavior: smooth;
+	-webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 ::-webkit-scrollbar {
@@ -62,7 +64,7 @@ body {
 	transition: top 2s;
 }
 
-#section1 > ::after{
+#section1> ::before {
 	content: '';
 	position: absolute;
 	top: 100%;
@@ -70,6 +72,20 @@ body {
 	width: 100%;
 	height: 50px;
 	background-color: #090909;
+	border-radius: 50%;
+	transform: translateY(-50%);
+	box-shadow: 0 5px 2px 2px #000000d8;
+	z-index: 1;
+}
+
+#section1> ::after {
+	content: '';
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+	height: 80px;
+	background: linear-gradient(to bottom, transparent 50%, #001166 50%);
 	border-radius: 50%;
 	transform: translateY(-50%);
 	box-shadow: 0 10px 5px 2px #000000d8;
@@ -94,14 +110,9 @@ h1 {
 #section1innerContainer {
 	margin-top: 100px;
 	z-index: 1;
-	/* display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
-	gap: 5px; */
 }
 
-#section1 iframe {
+#selfie {
 	border-radius: 50%;
 	margin: 17px;
 	width: 220px;
@@ -137,6 +148,7 @@ h1 {
 	left: 50%;
 	transform-origin: center;
 	transform: translateX(-50%);
+	background: #001166;
 	box-shadow: 7px 7px 5px #000;
 	z-index: 1;
 }
@@ -149,7 +161,7 @@ h1 {
 	transform: translate(-99%);
 	width: 49%;
 	height: 20px;
-	background: linear-gradient(to top right, transparent 50%, #0099ff 51%);
+	background: linear-gradient(to top right, transparent 50%, #001166 51%);
 	filter: drop-shadow(7px 7px 2px #000);
 }
 
@@ -161,7 +173,7 @@ h1 {
 	/* transform: translate(100%); */
 	width: 49%;
 	height: 20px;
-	background: linear-gradient(to top left, transparent 50%, #0099ff 51%);
+	background: linear-gradient(to top left, transparent 50%, #001166 51%);
 	filter: drop-shadow(7px 7px 2px #000);
 }
 
@@ -195,9 +207,24 @@ h1 {
 	z-index: 0;
 }
 
+.h1Container {
+	margin: 240px 0 30px;
+	background: linear-gradient(to bottom, #001166 5%, #030303 15%, #090909 15% 85%, #030303 85%, #001166 95%);
+	width: 200%;
+	padding: 50px;
+	transform: rotate(-3deg) translate(-25%, -50%);
+	position: relative;
+	box-shadow: 0 0 10px 5px #000;
+	opacity: .7;
+}
+
+.h1Container h1 {
+	transform: rotate(3deg);
+}
+
 .container {
 	z-index: 2;
-	margin: 40px auto;
+	margin: 0 auto;
 	border-radius: .5rem;
 	padding: 10px 10px 20px;
 	box-sizing: border-box;
@@ -359,10 +386,30 @@ a:hover {
 	color: #ededed;
 }
 
+#footerContainer {
+	margin-top: 120px;
+	position: relative;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding-top: 15px;
+	background: #001166;
+}
+
+#footerContainer::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 30px;
+	background: radial-gradient(farthest-side at 50% 0px, transparent 100%, #001166 101%);
+	transform: translateY(-100%);
+	z-index: 1;
+}
+
 footer {
-	/* display: none; */
-	background: #101010d8;
-	box-shadow: 0 -5px 5px 2px #000000a8;
+	background: #090909;
 	padding: 10px;
 	z-index: 2;
 	position: relative;
@@ -375,6 +422,18 @@ footer {
 	justify-content: space-evenly;
 	text-align: center;
 	gap: 9px;
+}
+
+footer::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 50px;
+	background: radial-gradient(farthest-side at 50% 0px, transparent 100%, #090909 101%);
+	transform: translateY(-100%);
+	z-index: 1;
 }
 
 footer a {
@@ -416,7 +475,7 @@ footer a {
 
 @media(min-width: 400px) {
 
-	#section1 iframe {
+	#selfie {
 		float: left;
 	}
 
