--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 	outline: none;
 	-webkit-tap-highlight-color: transparent;
 	user-select: none;
+	-webkit-user-drag: none;
 	box-sizing: border-box;
 	letter-spacing: .07em;
 	scroll-behavior: smooth;
@@ -173,6 +174,37 @@ h1 {
 	color: #09f;
 }
 
+#contacts {
+	margin: 33px 0 0;
+}
+
+#contacts div {
+	padding: 11px 0 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 17px;
+}
+
+#contacts a {
+	background: linear-gradient(to bottom right, #262626, #090909);
+	padding: 7px;
+	border-radius: .3rem;
+	aspect-ratio: 1/1;
+	display: grid;
+	place-items: center;
+}
+
+#contacts a:hover {
+	filter: brightness(1.2);
+	box-shadow: 2px 2px 5px #000000d8;
+}
+
+#contacts a:active {
+	box-shadow: inset 2px 2px 2px #000000d8;
+	filter: brightness(0.8);
+}
+
 #scrollDownBt {
 	width: 80px;
 	height: 5px;
@@ -296,7 +328,7 @@ zion-carousel {
 	justify-content: flex-end;
 }
 
-b {
+li b {
 	background: linear-gradient(10deg, #161616, transparent);
 	padding: 7px 13px 3px;
 	box-sizing: border-box;
